I changed the img

--- a/src/day1HTML/MyFirstWebPage.html
+++ b/src/day1HTML/MyFirstWebPage.html
@@ -30,8 +30,9 @@ Hello, my name is <b>Nurcan</b>, I am a <>Test Automation Engineer.
             <li>Blue</li>
             <li>Yellow</li>
         </ol>
-<h4>My Favourite active</h4>
-<img style="display: block;-webkit-user-select: none;margin: auto;cursor: zoom-in;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://th.bing.com/th/id/OIP.J-xGYZWen38YEmP0LKvwCgHaFj?pid=ImgDet&rs=1" width="110" height="82">slot
+<h4>My Favourite phone</h4>
+<img class="d-block responsiveimage" data-mode="dimensions" data-src="https://s7d1.scene7.com/is/image/tracfone/iPhone_14_Pro_Max_Space_Black_PDP_Image_Position-1a__en-US_318x400" src="https://s7d1.scene7.com/is/image/tracfone/iPhone_14_Pro_Max_Space_Black_PDP_Image_Position-1a__en-US_318x400?scl=1&amp;fmt=webp-alpha&amp;qlt=80,0&amp;resMode=sharp2&amp;op_usm=1.75,0.3,2,0" alt="" data-gtm-asset="c268aaac-bdff-414d-8445-0e80ea7d0dca" data-gtm-agencyid="null">
+
 
 
 </body>
